--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         if [ -f wwstatviz/requirements.txt ]; then pip install -r wwstatviz/requirements.txt; fi
+        pip install -e wwstatviz
     - name: Test with pytest
       run: |
         pytest
