--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pycodetest
+        pip install pycodestyle
     - name: PEP8 checks
       run: |
         cd wwstatviz/
